Prevent heading from wrapping.
To keep the stars positions correctly.

--- a/src/index.css
+++ b/src/index.css
@@ -162,6 +162,10 @@ footer div h3 {
     align-items: center;
 }
 
+.who-heading h1 {
+    white-space: nowrap;
+}
+
 .who .container {
     margin-left: auto;
     margin-right: auto;
